:lipstick fix align FeaturesSplit

--- a/front/src/components/HomeVisitor/FeaturesSplit/featuresSplit.scss
+++ b/front/src/components/HomeVisitor/FeaturesSplit/featuresSplit.scss
@@ -11,6 +11,7 @@
       margin-top: 1rem;
       margin-bottom: 3rem;
       font-size: 1.2rem;
+      text-align: center;
     }
 
     .split {
